[gd_scene load_steps=10 format=3 uid="uid://d3h3qgfctrux"]

[ext_resource type="Script" uid="uid://d4a35eeh1kqcv" path="res://src/object/card.gd" id="1_7j0fe"]
[ext_resource type="Texture2D" uid="uid://3p1m356it533" path="res://assets/card/back_card.png" id="1_rf2nd"]
[ext_resource type="Texture2D" uid="uid://cmuiwbe47dlxw" path="res://assets/card/move.png" id="2_rnmpv"]
[ext_resource type="Texture2D" uid="uid://dmnelr106toq6" path="res://assets/card/UI/chess_board.png" id="3_dfpm6"]
[ext_resource type="Texture2D" uid="uid://b687sp3iih72m" path="res://assets/card/UI/crystal.png" id="4_8aakp"]
[ext_resource type="Texture2D" uid="uid://ccfg32uuak6ff" path="res://assets/card/UI/number.png" id="5_cowo3"]
[ext_resource type="Texture2D" uid="uid://ersxbxv0qpjw" path="res://assets/card/UI/slots.png" id="6_6ax1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iv5r3"]
size = Vector2(104, 140)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4a24k"]
load_path = "res://.godot/imported/slots.png-422d6e25138c609c719acc6f3d28ad61.ctex"

[node name="card" type="Node2D"]
script = ExtResource("1_7j0fe")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_iv5r3")

[node name="back_card" type="Sprite2D" parent="."]
texture = ExtResource("1_rf2nd")
hframes = 9
frame = 6

[node name="image" type="Sprite2D" parent="."]
texture = ExtResource("2_rnmpv")
hframes = 9
frame = 6

[node name="crystal" type="Sprite2D" parent="."]
position = Vector2(-48, -72)
texture = ExtResource("4_8aakp")
hframes = 3
frame = 2

[node name="number" type="Sprite2D" parent="crystal"]
position = Vector2(0, -4)
texture = ExtResource("5_cowo3")
hframes = 13

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, 56)

[node name="slot1" type="Sprite2D" parent="Node2D"]
position = Vector2(-36, 8)
texture = SubResource("CompressedTexture2D_4a24k")
hframes = 10
vframes = 3

[node name="slot2" type="Sprite2D" parent="Node2D"]
position = Vector2(1, 8)
scale = Vector2(0.95, 1)
texture = SubResource("CompressedTexture2D_4a24k")
hframes = 10
vframes = 3

[node name="slot3" type="Sprite2D" parent="Node2D"]
position = Vector2(38, 8)
texture = ExtResource("6_6ax1v")
hframes = 10
vframes = 3

[node name="board" type="Sprite2D" parent="."]
position = Vector2(40, -56)
texture = ExtResource("3_dfpm6")

[node name="board_spots" type="CanvasGroup" parent="."]
position = Vector2(40, -56)

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
